--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
+
+  <ion-content>
+    <ion-item>
+      <ion-label position="stacked">Select Input To See Status Bar Reappear</ion-label>
+      <ion-input></ion-input>
+    </ion-item>
+  </ion-content>
 </ion-app>
